small fix on css input::placeholder for dark mode

--- a/frontend/public/css/theme.css
+++ b/frontend/public/css/theme.css
@@ -572,3 +572,7 @@ body.dark-mode {
     background-color: var(--dark-text);
     color: var(--dark-bg);
 }
+
+.dark-mode input::placeholder {
+    color: var(--dark-text) !important;
+}
